fix alignment

--- a/src/app/components/webpages/home/home.component.scss
+++ b/src/app/components/webpages/home/home.component.scss
@@ -8,6 +8,9 @@
   //max-height: calc(100vh - 7rem);
 }
 /*HOME*/
+#content {
+  margin-bottom: -1.6rem;
+}
 
 #mainHome {
   width: 100%;
